@startuml

' Set page orientation to landscape
skinparam pageOrientation landscape

' Set page size to A4
skinparam pageFormat A4

skinparam class {
  FontName "Helvetica"
  FontSize 10
  BackgroundColor White
  BorderColor Black
}

class User {
  + username: string
  + password: string
  + email: string
  + phone: string
  + address: List[Address]
  + roles: List[Role]
}

class Instructor {
  + specialty: string
  + bio: string
}

class Address {
  + street: string
  + city: string
  + state: string
  + zip: string
  + country: string
}

class Course {
  + name: string
  + img_url: string
  + price: float
  + author: Instructor
  + category: List[Category]
  + chapters: List[Chapter]
  + voucher: Voucher
  + created_at: datetime
  + updated_at: datetime
}

class Voucher {
  + code: string
  + discount: float
  + expiration_date: datetime
}

class Review {
  + comment: string
  + rating: int
}

class Lesson {
  + name: string
  + content: string
  + reviews: List[Review]
  + exercises: List[Exercise]
}

class Chapter {
  + name: string
  + content: string
  + lessons: List[Lesson]
}

class UserEnrollment {
  + user: User
  + course: Course
  + status: string
  + created_at: datetime
  + updated_at: datetime
  + expiration_date: datetime
}

class Exercise {
  + level: string
  + content: string
}

class Submission {
  + code: string
  + grade: float
}

class Role {
  + name: string
}

class UserSubmission {
  + user: User
  + submission: List[Submission]
  + exercise: Exercise
}

class Category {
  + name: string
}

class Payment {
  + amount: float
  + date: datetime
  + content: string
  + status: string
  + user: User
  + created_at: datetime
  + updated_at: datetime
}

class Notification {
  + message: string
  + date_sent: datetime
  + user: User
}

class Subscription {
  + start_date: datetime
  + end_date: datetime
  + user: User
  + courses: List[Course]
  + status: string
}

class TrackingLesson {
  + user: User
  + lesson: Lesson
  + status: string
  + created_at: datetime
  + updated_at: datetime
}

User <|-- Instructor : inherits
UserEnrollment "1" *--> "N" User : enrolled_by
User "1" *--> "N" Notification : sent_to
User "1" *--> "N" Subscription : subscribed_by
User "N" o--> "1" Address : associated_with
User "N" *--> "N" Role : has_roles
User "1" *--> "N" Payment : made_payments

UserEnrollment "1" *--> "N" Course : has_enrolled_users
Course "N" *--> "1" Chapter : part_of
Course "N" o--> "N" Category : categorized_as
Course "1" o--> "1" Voucher : applied_to

Chapter "N" *--> "1" Lesson : part_of
Lesson "N" o--> "1" Exercise : part_of
Lesson "N" o--> "1" Review : associated_with

UserSubmission "N" o--> "1" Exercise : related_to
UserSubmission "N" o--> "1" Submission : related_to

TrackingLesson "N" o--> "1" Lesson : related_to
TrackingLesson "N" o--> "1" User : related_to

@enduml